test/bad/generics/type09.px

func f<A,B,C>(p: A->B->C) def
    return

func g(x: Int): Bool def
    return x > 0

print f(g)
